[feature/header] change sort selector

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -78,6 +78,23 @@ body {
     display: flex;
   }
 }
+.header .site-header-main .menu > ul > li:last-child > a {
+  color: #ff4242;
+}
+.header .site-header-main .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title {
+  text-align: center;
+}
+.header .site-header-main .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item .title {
+  color: #ff4242;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1;
+  padding: 10px 0;
+}
+.header .site-header-main .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item {
+  flex: 0 0 25%;
+  padding: 0 15px;
+}
 .header .site-header-main .menu-drawer__account,
 .header .site-header-main .account-button-separator,
 .header .site-header-main .header-phone-block {
@@ -331,23 +348,6 @@ a {
   width: 100%;
 }
 
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item {
-  flex: 0 0 25%;
-  padding: 0 15px;
-}
-
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item .title {
-  color: #ff4242;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 1;
-  padding: 10px 0;
-}
-
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title {
-  text-align: center;
-}
-
 .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img {
   margin-top: 10px;
   max-width: 100%;
@@ -360,10 +360,6 @@ a {
 .header .item-right a:hover,
 .header .menu > ul > li:hover > a {
   color: #17696a;
-}
-
-.header .menu > ul > li:last-child > a {
-  color: #ff4242;
 }
 
 .mobile-menu-head,
@@ -393,18 +389,14 @@ a {
 }
 
 .desktop-categoryName {
-  display: block;
-  font-size: 14px;
-  text-decoration: none;
-}
-
-.desktop-categoryName {
   color: #1e212c;
+  display: block;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 1px;
   overflow: hidden;
   padding: 12px 0 2px;
+  text-decoration: none;
   text-overflow: ellipsis;
   text-transform: uppercase;
   white-space: nowrap;
@@ -442,8 +434,8 @@ li.menu-item-has-children:hover {
 }
 
 .mega-list-logo {
-  z-index: 10000;
   position: relative;
+  z-index: 10000;
 }
 
 .image-wrapper {
@@ -454,6 +446,12 @@ li.menu-item-has-children:hover {
   top: 50%;
   width: 285px;
 }
+.image-wrapper .site-subnav__image {
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+}
 .image-wrapper .text__section {
   color: #424551;
   font-size: 14px;
@@ -462,13 +460,6 @@ li.menu-item-has-children:hover {
 .image-wrapper .text__section .icon-arrow {
   margin: 0 8px;
   width: 12px;
-}
-
-.image-wrapper .site-subnav__image {
-  height: 100%;
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
 }
 
 .link-text__section {
@@ -486,8 +477,8 @@ li.menu-item-has-children:hover {
 }
 
 .link-text__section:hover {
-  color: #f89828;
   border: 1px solid #f89828;
+  color: #f89828;
 }
 
 .menu-drawer .menu-drawer__account {
