--- a/assets/styles.css
+++ b/assets/styles.css
@@ -513,3 +513,37 @@ li.menu-item-has-children:hover {
   color: #424551;
   font-size: 14px;
 }
+
+.footer {
+  background-color: #1e212c;
+}
+.footer .footer-block__heading {
+  font-family: "Lato";
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #fff;
+}
+.footer .list-menu__item {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #fff;
+  opacity: 0.6;
+  margin: 4px 0px;
+  transition: all 0.3s;
+  text-decoration: none;
+}
+.footer .list-menu__item:hover {
+  color: #ff4242;
+}
+.footer .footer-block__details-content .list-menu__item--active {
+  color: #03cea4;
+}
+.footer .footer-block__details-content {
+  color: #fff;
+  opacity: 0.6;
+}
+.footer .copyright__content {
+  color: #fff;
+}
