[feature/footer] add block image with text

--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -90,6 +90,34 @@
                       {{ 'image' | placeholder_svg_tag: 'placeholder-svg placeholder' }}
                     {%- endif -%}
                   </div>
+                {%- when 'image_text' -%}
+                  <div class="footer-block__details-content footer-block-image {{ block.settings.alignment }}">
+                    {%- if block.settings.image_text != blank -%}
+                      {%- assign image_text_size = block.settings.image_text_width | append: 'x' -%}
+                      <img
+                        srcset= "{{ block.settings.image_text | img_url: image_text_size }}, {{ block.settings.image_text | img_url: image_text_size, scale: 2 }} 2x"
+                        src="{{ block.settings.image_text | image_url: width: 200 }}"
+                        alt="{{ block.settings.image_text.alt | escape }}"
+                        loading="lazy"
+                        width="{{ block.settings.image_text.width }}"
+                        height="{{ block.settings.image_text.height }}"
+                        style="max-width: min(100%, {{ block.settings.image_text_width }}px);"
+                      >
+                      <img
+                        srcset= "{{ block.settings.image_text_second | img_url: image_text_size }}, {{ block.settings.image_text | img_url: image_text_size, scale: 2 }} 2x"
+                        src="{{ block.settings.image_text_second | image_url: width: 200 }}"
+                        alt="{{ block.settings.image_text_second.alt | escape }}"
+                        src="{{ block.settings.image_text_second | image_url: width: 200 }}"
+                        alt="{{ block.settings.image_text_second.alt | escape }}"
+                        loading="lazy"
+                        width="{{ block.settings.image_text_second.width }}"
+                        height="{{ block.settings.image_text_second.height }}"
+                        style="max-width: min(100%, {{ block.settings.image_text_width }}px);"
+                      >
+                    {%- else -%}
+                      {{ 'image' | placeholder_svg_tag: 'placeholder-svg placeholder' }}
+                    {%- endif -%}
+                  </div>
                 {%- endcase -%}
             </div>
           {%- endfor -%}
@@ -470,6 +498,38 @@
             }
           ],
           "default": "center"
+        }
+      ]
+    },
+    {
+      "type": "image_text",
+      "name": "Image with text",
+      "settings": [
+        {
+          "type": "text",
+          "id": "heading",
+          "default": "Heading",
+          "label": "t:sections.footer.blocks.image_text.settings.heading.label"
+        },
+        {
+          "type": "image_picker",
+          "id": "image_text",
+          "label": "Image with text"
+        },
+        {
+          "type": "image_picker",
+          "id": "image_text_second",
+          "label": "Image with text second"
+        },
+        {
+          "type": "range",
+          "id": "image_text_width",
+          "min": 50,
+          "max": 200,
+          "step": 5,
+          "unit": "px",
+          "label": "Image width",
+          "default": 100
         }
       ]
     }
