[feature/footer] change display grid, add copyright text

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -517,6 +517,22 @@ li.menu-item-has-children:hover {
 .footer {
   background-color: #1e212c;
 }
+.footer .footer__blocks-wrapper {
+  display: grid;
+  grid-column-gap: 44px;
+  grid-row-gap: 18px;
+  margin-bottom: 29px;
+  grid-template-columns: 1fr 1fr 1fr 2fr;
+}
+@media screen and (min-width: 750px) {
+  .footer .footer__blocks-wrapper {
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+  }
+}
+.footer .grid__item {
+  width: 100%;
+}
 .footer .footer-block__heading {
   font-family: "Lato";
   font-weight: 700;
@@ -582,4 +598,8 @@ li.menu-item-has-children:hover {
 }
 .footer .list-social__link {
   padding: 7px;
+}
+.footer .copyright__content {
+  font-size: 12px;
+  color: #fff;
 }
