--- a/dev/scss/sections/_footer.scss
+++ b/dev/scss/sections/_footer.scss
@@ -1,6 +1,23 @@
 .footer {
   background-color: $gray-900;
 
+  .footer__blocks-wrapper {
+    display: grid;
+    grid-column-gap: 44px;
+    grid-row-gap: 18px;
+    margin-bottom: 29px;
+    grid-template-columns: 1fr 1fr 1fr 2fr;
+
+    @media screen and (min-width: 750px) {
+      grid-column-gap: 30px;
+      grid-row-gap: 30px;
+    }
+  }
+
+  .grid__item {
+    width: 100%;
+  }
+
   .footer-block__heading {
     font-family: 'Lato';
     font-weight: 700;
@@ -82,5 +99,10 @@
 
   .list-social__link {
     padding: 7px;
+  }
+
+  .copyright__content {
+    font-size: 12px;
+    color: $white;
   }
 }
