--- a/dev/scss/sections/_footer.scss
+++ b/dev/scss/sections/_footer.scss
@@ -32,7 +32,7 @@
     text-transform: capitalize;
     color: $white;
     opacity: .6;
-    margin: 4px 0px;
+    margin: 4px 0;
     transition: all .3s;
     text-decoration: none;
 
@@ -64,6 +64,7 @@
 
   .copyright__content {
     color: $white;
+    font-size: 12px;
 
     a {
       transition: all .3s;
@@ -78,9 +79,10 @@
   .list-social__link {
     background-color: $gray-800;
     border-radius: 4px;
+    height: 32px;
+    padding: 7px;
     margin-right: 12px;
     transition: all .3s;
-    height: 32px;
     width: 32px;
 
     &:hover {
@@ -97,12 +99,9 @@
     margin-top: 10px;
   }
 
-  .list-social__link {
-    padding: 7px;
-  }
-
-  .copyright__content {
-    font-size: 12px;
-    color: $white;
+  .footer-block-image {
+    img {
+      margin-right: 20px;
+    }
   }
 }
