--- a/dev/scss/sections/_footer.scss
+++ b/dev/scss/sections/_footer.scss
@@ -6,11 +6,17 @@
     grid-column-gap: 44px;
     grid-row-gap: 18px;
     margin-bottom: 29px;
-    grid-template-columns: 1fr 1fr 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 
     @media screen and (min-width: 750px) {
+      grid-column-gap: 15px;
+      grid-row-gap: 30px;
+    }
+
+    @media screen and (min-width: 1200px) {
       grid-column-gap: 30px;
       grid-row-gap: 30px;
+      grid-template-columns: 1fr 1fr 1fr 2fr;
     }
   }
 
@@ -74,6 +80,10 @@
         text-decoration: none;
       }
     }
+  }
+
+  .list-social__item {
+    margin-top: 12px;
   }
 
   .list-social__link {
