--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -170,7 +170,7 @@
                   <div class="footer-block__details-content footer-block-image{{ block.settings.alignment }}">
                     {%- if block.settings.image_text != blank -%}
                       {%- assign image_text_size = block.settings.image_text_width | append: 'x' -%}
-                    <a href="{{ block.settings.link }}">
+                    <a href="{{ block.settings.link }}" target="_blank">
                       <img
                         srcset= "{{ block.settings.image_text | img_url: image_text_size }}, {{ block.settings.image_text | img_url: image_text_size, scale: 2 }} 2x"
                         src="{{ block.settings.image_text | image_url: width: 200 }}"
@@ -181,7 +181,7 @@
                         style="max-width: min(100%, {{ block.settings.image_text_width }}px);"
                       >
                     </a>
-                    <a href="{{ block.settings.link_second }}">
+                    <a href="{{ block.settings.link_second }}" target="_blank">
                       <img
                         srcset= "{{ block.settings.image_text_second | img_url: image_text_size }}, {{ block.settings.image_text | img_url: image_text_size, scale: 2 }} 2x"
                         src="{{ block.settings.image_text_second | image_url: width: 200 }}"
