--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -364,6 +364,13 @@
           <small class="copyright__content">&copy; {{ 'sections.footer.rights_reserved' | t }}. {{ 'sections.footer.text_studio' | t | link_to: routes.root_url }}</small>
         </div>
       </div>
+      <div class="footer__column footer__column--top">
+        <div class="footer__copyright caption">
+          <small class="copyright__content">
+            {% render 'back-to-the-top' %}
+          </small>
+        </div>
+      </div>
     </div>
   </div>
 </footer>
