--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="">
     <link rel="canonical" href="{{ canonical_url }}">
     <link rel="preconnect" href="https://cdn.shopify.com" crossorigin>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     {%- if settings.favicon != blank -%}
       <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
@@ -256,6 +257,7 @@
       }
     </script>
     <script src="{{ 'custom.js' | asset_url }}" defer="defer"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     {%- if settings.predictive_search_enabled -%}
       <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
