[feature/footer] change style button Back To Top, sort selectors

--- a/snippets/back-to-the-top.liquid
+++ b/snippets/back-to-the-top.liquid
@@ -10,7 +10,7 @@
 {% assign position_from_bottom = '6em' %}
 
 <a id="BackToTop" href="#" title="Back to the top" class="back-to-top hide">
-  <span>Go to top</span>
+  <i aria-hidden="true" focusable="false" role="presentation" class="fa fa-arrow-up"></i>
 </a>
 {{ '//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css' | stylesheet_tag }}
 <script>
