--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -488,6 +488,7 @@ li.menu-item-has-children:hover {
   height: 36px;
   left: 24px;
   top: 0;
+  transition: all .3s;
 }
 
 .link-text__section:hover {
