--- a/dev/scss/theme.scss
+++ b/dev/scss/theme.scss
@@ -30,6 +30,8 @@
 // sections
 
 @import 'sections/header';
+@import 'sections/announcement-bar';
+@import 'sections/slider-main';
 @import 'sections/footer';
 
 // --------------------------------------------------
