--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -6,12 +6,14 @@
           {%- if block.settings.link != blank -%}
             <a href="{{ block.settings.link }}" class="announcement-bar__link link link--text focus-inset animate-arrow">
           {%- endif -%}
-              <p class="announcement-bar__message h5">
-                {{ block.settings.text }}
-                {%- if block.settings.link != blank -%}
-                  {% render 'icon-arrow' %}
-                {%- endif -%}
-              </p>
+          <div class="announcement-bar__message h5">
+            <i aria-hidden="true" focusable="false" role="presentation" class="fa fa-angle-left"></i>
+            {{ block.settings.text }}
+            <i aria-hidden="true" focusable="false" role="presentation" class="fa fa-angle-right"></i>
+            {%- if block.settings.link != blank -%}
+              {% render 'icon-arrow' %}
+            {%- endif -%}
+          </div>
           {%- if block.settings.link != blank -%}
             </a>
           {%- endif -%}
