--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -1,10 +1,17 @@
 // --- header--- //
+.section-header {
+  @media screen and (min-width: 750px) {
+    margin-bottom: 0 !important;
+  }
+}
+
 .header {
   display: block;
   position: relative;
   width: 100%;
   z-index: 99;
   padding-top: 0;
+  padding-bottom: 0;
 
   .site-header-wrapper {
     background-color: $gray-800;
