--- a/assets/styles.css
+++ b/assets/styles.css
@@ -577,6 +577,29 @@ li.menu-item-has-children:hover {
   color: #ff4242;
 }
 
+@media screen and (min-width: 750px) {
+  .slideshow-section .banner--large:not(.banner--adapt) {
+    min-height: 80rem;
+  }
+}
+.slideshow-section .slideshow__control-wrapper {
+  width: 100%;
+  justify-content: space-between;
+}
+.slideshow-section .slider-counter__link {
+  font-family: "Ubuntu";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 28px;
+}
+.slideshow-section .slider-counter__link--numbers {
+  color: #424551;
+  opacity: 0.6;
+}
+.slideshow-section .slider-counter__link--active.slider-counter__link--numbers {
+  opacity: 1;
+}
+
 .footer {
   background-color: #1e212c;
 }
