--- a/sections/slideshow.liquid
+++ b/sections/slideshow.liquid
@@ -145,7 +145,7 @@
 {
   "name": "t:sections.slideshow.name",
   "tag": "section",
-  "class": "section",
+  "class": "section slideshow-section",
   "settings": [
     {
       "type": "select",
