[feature/slider main] add style controls slider, icon arrow

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -331,7 +331,7 @@ a {
   position: absolute;
   transition: all 0.5s ease;
   visibility: hidden;
-  z-index: 500;
+  z-index: 99;
 }
 
 @media (min-width: 992px) {
@@ -473,7 +473,7 @@ li.menu-item-has-children:hover {
 
 .mega-list-logo {
   position: relative;
-  z-index: 10000;
+  z-index: 99;
 }
 
 .image-wrapper {
@@ -584,13 +584,13 @@ li.menu-item-has-children:hover {
 }
 .slideshow-section .slideshow__control-wrapper {
   width: 100%;
-  justify-content: space-between;
 }
 .slideshow-section .slider-counter__link {
   font-family: "Ubuntu";
   font-style: normal;
   font-weight: 700;
   font-size: 28px;
+  text-decoration: underline;
 }
 .slideshow-section .slider-counter__link--numbers {
   color: #424551;
@@ -598,6 +598,53 @@ li.menu-item-has-children:hover {
 }
 .slideshow-section .slider-counter__link--active.slider-counter__link--numbers {
   opacity: 1;
+}
+.slideshow-section .banner {
+  position: relative;
+}
+.slideshow-section .slideshow__controls {
+  position: unset;
+}
+.slideshow-section .slider-button {
+  top: 50%;
+  position: absolute;
+  display: block;
+  width: 48px;
+  height: 48px;
+  transform: translateY(-50%);
+  z-index: 5;
+  transition: all 0.3s;
+}
+.slideshow-section .slider-button--prev {
+  left: 32px;
+  background: #FFFFFF;
+  opacity: 0.5;
+  border-radius: 50px;
+}
+.slideshow-section .slider-button--prev:hover {
+  opacity: 1;
+}
+.slideshow-section .slider-button--next {
+  right: 32px;
+  background: #FFFFFF;
+  opacity: 0.5;
+  border-radius: 50px;
+}
+.slideshow-section .slider-button--next:hover {
+  opacity: 1;
+}
+.slideshow-section .slideshow__text-wrapper {
+  position: relative;
+}
+.slideshow-section .slider-counter {
+  position: absolute;
+  bottom: 180px;
+  z-index: 5;
+  width: 50%;
+  left: 16%;
+}
+.slideshow-section .slider-button--next {
+  transform: rotate(180deg);
 }
 
 .footer {
